tests/errors/sem.expected-constant.inferred-call-arg.or
main :: () -> void {
    T :: (!t: int) -> int {
        return t;
    };

    x := 10;
    T(x);
};
